{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 37,
  "lineage": "2fe5b808-2c30-05a3-40d1-0d5d96483a2f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ap-south-1a",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0861f4e788f5069dd",
            "arn": "arn:aws:ec2:ap-south-1:608185228420:instance/i-04d6b808928f2c95a",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04d6b808928f2c95a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mumbai-terraform",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0398580ccf7ca7257"
              }
            ],
            "primary_network_interface_id": "eni-0398580ccf7ca7257",
            "private_dns": "ip-10-10-0-245.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.0.245",
            "public_dns": "ec2-3-110-182-11.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.110.182.11",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a0fb3dae23d4a71f",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ff0d13cfe8f32c50",
            "tags": {
              "Environment": "dev",
              "ManagagedByTerrafrom": "true",
              "Name": "Web_Server-ap-south-1a"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagagedByTerrafrom": "true",
              "Name": "Web_Server-ap-south-1a"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01e9b3a2b1f390646"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.allow_web_ssh",
            "data.aws_ami.amazon_linux_2023",
            "data.aws_availability_zones.availabile",
            "data.aws_ec2_instance_type_offerings.my_instance_type",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": "ap-south-1b",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0861f4e788f5069dd",
            "arn": "arn:aws:ec2:ap-south-1:608185228420:instance/i-08c1c91c1d957b9df",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08c1c91c1d957b9df",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mumbai-terraform",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-02fea382c71e8233b"
              }
            ],
            "primary_network_interface_id": "eni-02fea382c71e8233b",
            "private_dns": "ip-10-10-1-142.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.1.142",
            "public_dns": "ec2-3-109-200-3.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.109.200.3",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b289861ba8e48d00",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04a211c235c65e276",
            "tags": {
              "Environment": "dev",
              "ManagagedByTerrafrom": "true",
              "Name": "Web_Server-ap-south-1b"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagagedByTerrafrom": "true",
              "Name": "Web_Server-ap-south-1b"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01e9b3a2b1f390646"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.allow_web_ssh",
            "data.aws_ami.amazon_linux_2023",
            "data.aws_availability_zones.availabile",
            "data.aws_ec2_instance_type_offerings.my_instance_type",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:608185228420:security-group/sg-01e9b3a2b1f390646",
            "description": "Allow SSH, HTTP, and HTTPS inbound traffic",
            "egress": [],
            "id": "sg-01e9b3a2b1f390646",
            "ingress": [],
            "name": "allow_web_ssh",
            "name_prefix": "",
            "owner_id": "608185228420",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_web_ssh"
            },
            "tags_all": {
              "Name": "allow_web_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-07bb57ce1361af8bc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "608185228420",
            "id": "sg-01e9b3a2b1f390646",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:608185228420:security-group-rule/sgr-039e2b690bcbdf8b6",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-039e2b690bcbdf8b6",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-01e9b3a2b1f390646",
            "security_group_rule_id": "sgr-039e2b690bcbdf8b6",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.allow_web_ssh",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:608185228420:security-group-rule/sgr-0e5f3c505781275f6",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0e5f3c505781275f6",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-01e9b3a2b1f390646",
            "security_group_rule_id": "sgr-0e5f3c505781275f6",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.allow_web_ssh",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:608185228420:security-group-rule/sgr-01aa0f8c5eb83a82e",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-01aa0f8c5eb83a82e",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-01e9b3a2b1f390646",
            "security_group_rule_id": "sgr-01aa0f8c5eb83a82e",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.allow_web_ssh",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:608185228420:security-group-rule/sgr-0b8f6be56948d6d1f",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0b8f6be56948d6d1f",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-01e9b3a2b1f390646",
            "security_group_rule_id": "sgr-0b8f6be56948d6d1f",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.allow_web_ssh",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:608185228420:network-acl/acl-0350cfd5a605244af",
            "default_network_acl_id": "acl-0350cfd5a605244af",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0350cfd5a605244af",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "608185228420",
            "region": "ap-south-1",
            "subnet_ids": [
              "subnet-04a211c235c65e276",
              "subnet-08b21e2393df4746a",
              "subnet-099a22297e6f3b583",
              "subnet-0ff0d13cfe8f32c50"
            ],
            "tags": {
              "Environment": "dev",
              "ManagagedByTerrafrom": "yes",
              "Name": "dev-vpc-tf-default"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagagedByTerrafrom": "yes",
              "Name": "dev-vpc-tf-default"
            },
            "vpc_id": "vpc-07bb57ce1361af8bc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:608185228420:route-table/rtb-0e3c0bfe07a9d7b77",
            "default_route_table_id": "rtb-0e3c0bfe07a9d7b77",
            "id": "rtb-0e3c0bfe07a9d7b77",
            "owner_id": "608185228420",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [],
            "tags": {
              "Environment": "dev",
              "ManagagedByTerrafrom": "yes",
              "Name": "dev-vpc-tf-default"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagagedByTerrafrom": "yes",
              "Name": "dev-vpc-tf-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-07bb57ce1361af8bc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:608185228420:internet-gateway/igw-03f6e3e1a1e41613b",
            "id": "igw-03f6e3e1a1e41613b",
            "owner_id": "608185228420",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "ManagagedByTerrafrom": "yes",
              "Name": "dev-vpc-tf"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagagedByTerrafrom": "yes",
              "Name": "dev-vpc-tf"
            },
            "vpc_id": "vpc-07bb57ce1361af8bc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03f6e3e1a1e41613b",
            "id": "r-rtb-047bb869cf1f9ec231080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-south-1",
            "route_table_id": "rtb-047bb869cf1f9ec23",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.availabile",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:608185228420:route-table/rtb-04398b22d3a3af624",
            "id": "rtb-04398b22d3a3af624",
            "owner_id": "608185228420",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [],
            "tags": {
              "Environment": "dev",
              "ManagagedByTerrafrom": "yes",
              "Name": "dev-vpc-tf-private-ap-south-1a"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagagedByTerrafrom": "yes",
              "Name": "dev-vpc-tf-private-ap-south-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-07bb57ce1361af8bc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.availabile",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:608185228420:route-table/rtb-007408eb2451c5b74",
            "id": "rtb-007408eb2451c5b74",
            "owner_id": "608185228420",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [],
            "tags": {
              "Environment": "dev",
              "ManagagedByTerrafrom": "yes",
              "Name": "dev-vpc-tf-private-ap-south-1b"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagagedByTerrafrom": "yes",
              "Name": "dev-vpc-tf-private-ap-south-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-07bb57ce1361af8bc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.availabile",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:608185228420:route-table/rtb-047bb869cf1f9ec23",
            "id": "rtb-047bb869cf1f9ec23",
            "owner_id": "608185228420",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03f6e3e1a1e41613b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagagedByTerrafrom": "yes",
              "Name": "dev-vpc-tf-public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagagedByTerrafrom": "yes",
              "Name": "dev-vpc-tf-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-07bb57ce1361af8bc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.availabile",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b184846f8098988f",
            "region": "ap-south-1",
            "route_table_id": "rtb-04398b22d3a3af624",
            "subnet_id": "subnet-08b21e2393df4746a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.availabile",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00e74cd8d9f21fbb6",
            "region": "ap-south-1",
            "route_table_id": "rtb-007408eb2451c5b74",
            "subnet_id": "subnet-099a22297e6f3b583"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.availabile",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06cd4503525f5c026",
            "region": "ap-south-1",
            "route_table_id": "rtb-047bb869cf1f9ec23",
            "subnet_id": "subnet-0ff0d13cfe8f32c50"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.availabile",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0852b332a3fb76a85",
            "region": "ap-south-1",
            "route_table_id": "rtb-047bb869cf1f9ec23",
            "subnet_id": "subnet-04a211c235c65e276"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.availabile",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:608185228420:subnet/subnet-08b21e2393df4746a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.10.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08b21e2393df4746a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "608185228420",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "ManagagedByTerrafrom": "yes",
              "Name": "Private subnet 1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagagedByTerrafrom": "yes",
              "Name": "Private subnet 1"
            },
            "vpc_id": "vpc-07bb57ce1361af8bc"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "608185228420",
            "id": "subnet-08b21e2393df4746a",
            "region": "ap-south-1"
          },
          "dependencies": [
            "data.aws_availability_zones.availabile",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:608185228420:subnet/subnet-099a22297e6f3b583",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.10.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-099a22297e6f3b583",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "608185228420",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "ManagagedByTerrafrom": "yes",
              "Name": "Private subnet 2"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagagedByTerrafrom": "yes",
              "Name": "Private subnet 2"
            },
            "vpc_id": "vpc-07bb57ce1361af8bc"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "608185228420",
            "id": "subnet-099a22297e6f3b583",
            "region": "ap-south-1"
          },
          "dependencies": [
            "data.aws_availability_zones.availabile",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:608185228420:subnet/subnet-0ff0d13cfe8f32c50",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.10.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ff0d13cfe8f32c50",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "608185228420",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "ManagagedByTerrafrom": "yes",
              "Name": "Public subnet 1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagagedByTerrafrom": "yes",
              "Name": "Public subnet 1"
            },
            "vpc_id": "vpc-07bb57ce1361af8bc"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "608185228420",
            "id": "subnet-0ff0d13cfe8f32c50",
            "region": "ap-south-1"
          },
          "dependencies": [
            "data.aws_availability_zones.availabile",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:608185228420:subnet/subnet-04a211c235c65e276",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04a211c235c65e276",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "608185228420",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "ManagagedByTerrafrom": "yes",
              "Name": "Public subnet 2"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagagedByTerrafrom": "yes",
              "Name": "Public subnet 2"
            },
            "vpc_id": "vpc-07bb57ce1361af8bc"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "608185228420",
            "id": "subnet-04a211c235c65e276",
            "region": "ap-south-1"
          },
          "dependencies": [
            "data.aws_availability_zones.availabile",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:608185228420:vpc/vpc-07bb57ce1361af8bc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0350cfd5a605244af",
            "default_route_table_id": "rtb-0e3c0bfe07a9d7b77",
            "default_security_group_id": "sg-0402d3e7faeb6d658",
            "dhcp_options_id": "dopt-25878f4d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07bb57ce1361af8bc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e3c0bfe07a9d7b77",
            "owner_id": "608185228420",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "ManagagedByTerrafrom": "yes",
              "Name": "dev-vpc-tf"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagagedByTerrafrom": "yes",
              "Name": "dev-vpc-tf"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}